--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   </head>
 <!-- BODY -->
   <body>
+    <header class="page-header">
+      <div class="container">
 
+      </div>
+      <!-- /.container -->
+    </header>
+    <!-- /.page-header -->
   </body>
 </html>
