--- a/index.html
+++ b/index.html
@@ -15,7 +15,29 @@
   <body>
     <header class="page-header">
       <div class="container">
-
+        <h1 class="header__logo">Cahee</h1>
+        <nav class="header__nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="" class="nav__link">home</a></li>
+            <li class="nav__item"><a href="" class="nav__link">about</a></li>
+            <li class="nav__item"><a href="" class="nav__link">services</a></li>
+            <li class="nav__item"><a href="" class="nav__link">gallery</a></li>
+            <li class="nav__item"><a href="" class="nav__link">blog</a></li>
+            <li class="nav__item"><a href="" class="nav__link">contact</a></li>
+          </ul>
+        </nav>
+        <section class="header__info">
+          <h2 class="info__title">Fresh Life</h2>
+          <p class="info__text">
+            Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          </p>
+          <button class="info__button">get free now</button>
+        </section>
+        <div class="header__scroll">
+          <a href="" class="scroll__link">
+            <img class="scroll__img" src="assets/icons/scroll.png" alt="Scroll down">
+          </a>
+        </div>
       </div>
       <!-- /.container -->
     </header>
