Favicon added. Pacifico font generated and used localy. Header section done in index.html. CSS styles applied to header section.

--- a/index.html
+++ b/index.html
@@ -9,38 +9,41 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <!-- internal CSS styles -->
     <link rel="stylesheet" href="assets/css/main.css">
-    <title>Empty project</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="assets/icons/strawberry.ico">
+    <title>Cahee</title>
   </head>
 <!-- BODY -->
   <body>
+    <!-- header section-->
     <header class="page-header">
-      <div class="container">
+      <div id="home" class="container">
         <h1 class="header__logo">Cahee</h1>
         <nav class="header__nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="" class="nav__link">home</a></li>
-            <li class="nav__item"><a href="" class="nav__link">about</a></li>
-            <li class="nav__item"><a href="" class="nav__link">services</a></li>
-            <li class="nav__item"><a href="" class="nav__link">gallery</a></li>
-            <li class="nav__item"><a href="" class="nav__link">blog</a></li>
-            <li class="nav__item"><a href="" class="nav__link">contact</a></li>
+            <li class="nav__item"><a class="nav__link" href="#home">home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#about">about</a></li>
+            <li class="nav__item"><a class="nav__link" href="#services">services</a></li>
+            <li class="nav__item"><a class="nav__link" href="#gallery">gallery</a></li>
+            <li class="nav__item"><a class="nav__link" href="#blog">blog</a></li>
+            <li class="nav__item"><a class="nav__link" href="#contact">contact</a></li>
           </ul>
         </nav>
         <section class="header__info">
-          <h2 class="info__title">Fresh Life</h2>
+          <h2 class="info__title">fresh life</h2>
           <p class="info__text">
             Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
           </p>
           <button class="info__button">get free now</button>
         </section>
         <div class="header__scroll">
-          <a href="" class="scroll__link">
-            <img class="scroll__img" src="assets/icons/scroll.png" alt="Scroll down">
-          </a>
+          <a href="#about" class="scroll__link"><img src="assets/icons/scroll.png" alt="Scroll down"></a>
         </div>
       </div>
       <!-- /.container -->
     </header>
     <!-- /.page-header -->
+    <!-- about section -->
+
   </body>
 </html>
