About section added to the project

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <li class="nav__item"><a class="nav__link" href="#contact">contact</a></li>
           </ul>
         </nav>
-        <section class="header__info">
-          <h2 class="info__title">fresh life</h2>
+        <div class="section__info">
+          <h2 class="info__title info__title--header">fresh life</h2>
           <p class="info__text">
             Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
           </p>
           <button class="info__button">get free now</button>
-        </section>
+        </div>
         <div class="header__scroll">
           <a href="#about" class="scroll__link"><img src="assets/icons/scroll.png" alt="Scroll down"></a>
         </div>
@@ -44,6 +44,19 @@
     </header>
     <!-- /.page-header -->
     <!-- about section -->
-
+  <section class="about-section">
+    <div id="about" class="container">
+      <img class="section__image" src="assets/img/about-us.png" alt="About us">
+      <div class="section__info section__info--white">
+        <h2 class="info__title">about us</h2>
+        <p class="info__text">
+          Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum. <br>
+          Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
+        </p>
+      </div>
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.about-section -->
   </body>
 </html>
