Gallery and footer sections added and styled. Images added in .png to the project.

--- a/index.html
+++ b/index.html
@@ -105,15 +105,60 @@
   <!-- /.services-section -->
   <!-- gallery -->
   <section class="gallery">
+    <div class="section__info section__info--center">
+      <h2 class="info__title info__title--center">Gallery</h2>
+      <p class="info__text">
+        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+    </div>
     <div id="gallery" class="flex-container">
-
+      <ul class="gallery__list">
+        <li class="gallery__item gallery__item--hero">
+          <a class="gallery__link" href="">
+            <img class="gallery__picture" src="assets/img/gallery-picture-hero.png" alt="hero picture">
+          </a>
+        </li>
+        <li class="gallery__item gallery__item--small">
+         <a class="gallery__link" href="">
+          <img class="gallery__picture" src="assets/img/gallery-picture-small-1.png" alt="gallery picture">
+         </a>
+        </li>
+        <li class="gallery__item gallery__item--small">
+         <a class="gallery__link" href="">
+          <img class="gallery__picture" src="assets/img/gallery-picture-small-2.png" alt="gallery picture">
+         </a>
+        </li>
+        <li class="gallery__item">
+          <a class="gallery__link" href="">
+            <img class="gallery__picture" src="assets/img/gallery-picture-3.png" alt="gallery picture">
+          </a>
+        </li>
+        <li class="gallery__item">
+          <a class="gallery__link" href="">
+            <img class="gallery__picture gallery__picture--big" src="assets/img/gallery-picture-4.png" alt="gallery picture">
+          </a>
+        </li>
+      </ul>
     </div>
     <!-- /#gallery.flex-container -->
+    <button class="gallery__button" type="button" name="button">view more</button>
   </section>
   <!-- /.gallery -->
 
 
 
-
+  <footer class="page__footer">
+    <div class="flex-container">
+      <p class="footer__copyright">
+        © 2015 Company. All right reserved.
+      </p>
+      <h1 class="header__logo header__logo--mini">Cahee</h1>
+      <p class="footer__info">
+        Made with <span>love</span> by Auskteez
+      </p>
+    </div>
+    <!-- /.flex-container -->
+  </footer>
+  <!-- /.page__footer -->
   </body>
 </html>
