Subscribe section added and styled. Footer section fixes.

--- a/index.html
+++ b/index.html
@@ -115,27 +115,25 @@
       <ul class="gallery__list">
         <li class="gallery__item gallery__item--hero">
           <a class="gallery__link" href="">
-            <img class="gallery__picture" src="assets/img/gallery-picture-hero.png" alt="hero picture">
+            <img class="gallery__picture" src="assets/img/gallery-img-1.jpg" alt="hero picture">
           </a>
         </li>
         <li class="gallery__item gallery__item--small">
-         <a class="gallery__link" href="">
-          <img class="gallery__picture" src="assets/img/gallery-picture-small-1.png" alt="gallery picture">
-         </a>
-        </li>
-        <li class="gallery__item gallery__item--small">
-         <a class="gallery__link" href="">
-          <img class="gallery__picture" src="assets/img/gallery-picture-small-2.png" alt="gallery picture">
-         </a>
-        </li>
-        <li class="gallery__item">
           <a class="gallery__link" href="">
-            <img class="gallery__picture" src="assets/img/gallery-picture-3.png" alt="gallery picture">
+            <img class="gallery__picture" src="assets/img/gallery-img-2.jpg" alt="gallery picture">
+          </a>
+          <a class="gallery__link" href="">
+            <img class="gallery__picture" src="assets/img/gallery-img-3.jpg" alt="gallery picture">
           </a>
         </li>
-        <li class="gallery__item">
+        <li class="gallery__item gallery__item--middle">
           <a class="gallery__link" href="">
-            <img class="gallery__picture gallery__picture--big" src="assets/img/gallery-picture-4.png" alt="gallery picture">
+            <img class="gallery__picture" src="assets/img/gallery-img-4.jpg" alt="gallery picture">
+          </a>
+        </li>
+        <li class="gallery__item gallery__item--middle">
+          <a class="gallery__link" href="">
+            <img class="gallery__picture" src="assets/img/gallery-img-5.jpg" alt="gallery picture">
           </a>
         </li>
       </ul>
@@ -144,7 +142,23 @@
     <button class="gallery__button" type="button" name="button">view more</button>
   </section>
   <!-- /.gallery -->
-
+  <!-- subscribe -->
+  <section class="subscribe">
+    <div class="flex-container">
+      <div class="section__info">
+        <h2 class="info__title">Subscribe To Us</h2>
+        <p class="info__text">
+          Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+        <form class="subscribe__form" action="index.html" method="post">
+          <input class="subscribe__input" type="email" name="subscribe__input" value="" placeholder="Your email address..." required>
+          <button class="subscribe__button" type="submit" name="subscribe__button">subscribe</button>
+        </form>
+      </div>
+    </div>
+    <!-- /.flex-container -->
+  </section>
+  <!-- /.subscribe -->
 
 
   <footer class="page__footer">
