Contact section added and styled.

--- a/index.html
+++ b/index.html
@@ -159,6 +159,35 @@
     <!-- /.flex-container -->
   </section>
   <!-- /.subscribe -->
+  <section class="contact">
+    <div class="section__info section__info--center">
+      <h2 class="info__title info__title--center">Contact</h2>
+      <p class="info__text">
+        For new projects, ideas, business or anything
+        you'd like to discuss, contact with me!
+      </p>
+    </div>
+    <div id="contact" class="flex-container">
+      <form class="contact__form" action="index.html" method="post">
+        <input class="form__name" type="text" placeholder="Your name...">
+        <input class="form__email" type="email" placeholder="Your email...">
+        <input class="form__number" type="tel" placeholder="Your phone number...">
+        <input class="form__text" placeholder="Your message...">
+      </form>
+      <div class="contact__info">
+        <h3 class="contact__title">address</h3>
+        <p class="contact__description">123 City name, Street, City, Country</p>
+        <h3 class="contact__title">email</h3>
+        <p class="contact__description">cahee@domain.com</p>
+        <h3 class="contact__title">phone</h3>
+        <p class="contact__description">+012 345 6789</p>
+      </div>
+      <!-- /.contact__info -->
+    </div>
+    <!-- /#contact.flex-container -->
+  </section>
+  <!-- /.contact -->
+
 
 
   <footer class="page__footer">
