Unused files removed. Blog section added and styled.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest normalize CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <!-- external flexbox grid -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
     <!-- internal CSS styles -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- favicon -->
@@ -103,7 +101,8 @@
     <!-- /#services.flex-container -->
   </section>
   <!-- /.services-section -->
-  <!-- gallery -->
+
+  <!-- gallery section -->
   <section class="gallery">
     <div class="section__info section__info--center">
       <h2 class="info__title info__title--center">Gallery</h2>
@@ -142,7 +141,8 @@
     <button class="gallery__button" type="button" name="button">view more</button>
   </section>
   <!-- /.gallery -->
-  <!-- subscribe -->
+
+  <!-- subscribe section -->
   <section class="subscribe">
     <div class="flex-container">
       <div class="section__info">
@@ -159,6 +159,47 @@
     <!-- /.flex-container -->
   </section>
   <!-- /.subscribe -->
+
+  <!-- blog section -->
+  <section class="blog">
+    <div class="section__info section__info--center section__info--light">
+      <h2 class="info__title info__title--center">Blog</h2>
+      <p class="info__text">
+        Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+      </p>
+    </div>
+    <div id="blog" class="flex-container">
+      <div class="blog__article">
+        <img class="article__image" src="assets/img/blog-img-1.jpg" alt="photo">
+          <div class="article__info">
+            <h4 class="article__title">Green Smoothies: Too Much of a Good Thing?</h4>
+            <p class="article__text">By Auskteez - 2 hours ago</p>
+            <span class="article__data">20 nov</span>
+          </div>
+      </div>
+      <div class="blog__article">
+        <img class="article__image" src="assets/img/blog-img-2.jpg" alt="photo">
+          <div class="article__info">
+            <h4 class="article__title">Growing Food and a “Thirst” for Innovation</h4>
+            <p class="article__text">By Auskteez - 3 hours ago</p>
+            <span class="article__data">14 nov</span>
+          </div>
+      </div>
+      <div class="blog__article">
+        <img class="article__image" src="assets/img/blog-img-3.jpg" alt="photo">
+          <div class="article__info">
+            <h4 class="article__title">Pesticides & Food: What You Need to Know</h4>
+            <p class="article__text">By Auskteez - 6 hours ago</p>
+            <span class="article__data">10 nov</span>
+          </div>
+      </div>
+    </div>
+    <!-- /#blog.flex-container -->
+    <button class="blog__button" type="button" name="button">view more</button>
+  </section>
+  <!-- /.blog -->
+
+  <!-- contact section-->
   <section class="contact">
     <div class="section__info section__info--center">
       <h2 class="info__title info__title--center">Contact</h2>
@@ -195,7 +236,7 @@
       <p class="footer__copyright">
         © 2015 Company. All right reserved.
       </p>
-      <h1 class="header__logo header__logo--mini">Cahee</h1>
+      <h1 class="footer__logo">Cahee</h1>
       <p class="footer__info">
         Made with <span>love</span> by Auskteez
       </p>
