Work with styles in a Blog section.

--- a/index.html
+++ b/index.html
@@ -161,36 +161,45 @@
   <!-- /.subscribe -->
 
   <!-- blog section -->
-  <section class="blog">
+  <section id="blog" class="blog">
     <div class="section__info section__info--center section__info--light">
       <h2 class="info__title info__title--center">Blog</h2>
       <p class="info__text">
         Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
       </p>
     </div>
-    <div id="blog" class="flex-container">
+    <div class="flex-container">
       <div class="blog__article">
-        <img class="article__image" src="assets/img/blog-img-1.jpg" alt="photo">
+        <img class="article__image" src="assets/img/blog-img-1.jpg" alt="photo"/>
           <div class="article__info">
             <h4 class="article__title">Green Smoothies: Too Much of a Good Thing?</h4>
             <p class="article__text">By Auskteez - 2 hours ago</p>
-            <span class="article__data">20 nov</span>
+            <div class="article__date">
+              <p>20</p>
+              <span>nov</span>
+            </div>
           </div>
       </div>
       <div class="blog__article">
-        <img class="article__image" src="assets/img/blog-img-2.jpg" alt="photo">
+        <img class="article__image" src="assets/img/blog-img-2.jpg" alt="photo"/>
           <div class="article__info">
             <h4 class="article__title">Growing Food and a “Thirst” for Innovation</h4>
             <p class="article__text">By Auskteez - 3 hours ago</p>
-            <span class="article__data">14 nov</span>
+            <div class="article__date">
+              <p>14</p>
+              <span>nov</span>
+            </div>
           </div>
       </div>
       <div class="blog__article">
-        <img class="article__image" src="assets/img/blog-img-3.jpg" alt="photo">
+        <img class="article__image" src="assets/img/blog-img-3.jpg" alt="photo"/>
           <div class="article__info">
             <h4 class="article__title">Pesticides & Food: What You Need to Know</h4>
             <p class="article__text">By Auskteez - 6 hours ago</p>
-            <span class="article__data">10 nov</span>
+            <div class="article__date">
+              <p>10</p>
+              <span>nov</span>
+            </div>
           </div>
       </div>
     </div>
