Textarea added instead of input field in contact section.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <input class="form__name" type="text" placeholder="Your name...">
         <input class="form__email" type="email" placeholder="Your email...">
         <input class="form__number" type="tel" placeholder="Your phone number...">
-        <input class="form__text" placeholder="Your message...">
+        <textarea class="form__text" cols="30" rows="10" placeholder="Your message..."></textarea>
       </form>
       <div class="contact__info">
         <h3 class="contact__title">address</h3>
@@ -238,12 +238,11 @@
   </section>
   <!-- /.contact -->
 
-
-
+  <!-- footer -->
   <footer class="page__footer">
     <div class="flex-container">
       <p class="footer__copyright">
-        © 2015 Company. All right reserved.
+        © 2017 Company. All right reserved.
       </p>
       <h1 class="footer__logo">Cahee</h1>
       <p class="footer__info">
