--- a/index.html
+++ b/index.html
@@ -107,35 +107,35 @@
   <!-- /.services-section -->
 
   <!-- gallery section -->
-  <section class="gallery">
+  <section id="gallery" class="gallery">
     <div class="section__info section__info--center">
       <h2 class="info__title info__title--center">Gallery</h2>
       <p class="info__text">
         Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
     </div>
-    <div id="gallery" class="flex-container">
+    <div class="flex-container">
       <ul class="gallery__list">
         <li class="gallery__item gallery__item--hero">
-          <a class="gallery__link" href="">
+          <a class="gallery__link" href="#gallery">
             <img class="gallery__picture .gallery__picture--hero" src="assets/img/gallery-img-1.jpg" alt="hero picture">
           </a>
         </li>
         <li class="gallery__item gallery__item--small">
-          <a class="gallery__link" href="">
+          <a class="gallery__link" href="gallery">
             <img class="gallery__picture" src="assets/img/gallery-img-2.jpg" alt="gallery picture">
           </a>
-          <a class="gallery__link" href="">
+          <a class="gallery__link" href="gallery">
             <img class="gallery__picture" src="assets/img/gallery-img-3.jpg" alt="gallery picture">
           </a>
         </li>
         <li class="gallery__item gallery__item--middle">
-          <a class="gallery__link" href="">
+          <a class="gallery__link" href="gallery">
             <img class="gallery__picture" src="assets/img/gallery-img-4.jpg" alt="gallery picture">
           </a>
         </li>
         <li class="gallery__item gallery__item--middle">
-          <a class="gallery__link" href="">
+          <a class="gallery__link" href="gallery">
             <img class="gallery__picture" src="assets/img/gallery-img-5.jpg" alt="gallery picture">
           </a>
         </li>
@@ -173,7 +173,7 @@
       </p>
     </div>
     <div class="flex-container">
-      <div class="blog__article">
+      <a class="blog__article" href="#blog">
         <img class="article__image" src="assets/img/blog-img-1.jpg" alt="photo"/>
           <div class="article__info">
             <h4 class="article__title">Green Smoothies: Too Much of a Good Thing?</h4>
@@ -183,8 +183,8 @@
               <span>nov</span>
             </div>
           </div>
-      </div>
-      <div class="blog__article">
+      </a>
+      <a class="blog__article" href="#blog">
         <img class="article__image" src="assets/img/blog-img-2.jpg" alt="photo"/>
           <div class="article__info">
             <h4 class="article__title">Growing Food and a “Thirst” for Innovation</h4>
@@ -194,8 +194,8 @@
               <span>nov</span>
             </div>
           </div>
-      </div>
-      <div class="blog__article">
+      </a>
+      <a class="blog__article" href="#blog">
         <img class="article__image" src="assets/img/blog-img-3.jpg" alt="photo"/>
           <div class="article__info">
             <h4 class="article__title">Pesticides & Food: What You Need to Know</h4>
@@ -205,7 +205,7 @@
               <span>nov</span>
             </div>
           </div>
-      </div>
+      </a>
     </div>
     <!-- /#blog.flex-container -->
     <button class="blog__button" type="button" name="button">view more</button>
